:construction: Se hicieron una serie de ajustes y se agrego la página edit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+    <%= alert %>
+    <%= notice %>
+    <%= flash.inspect %>
     <%= render 'shared/header' %>
     <%= yield %>
   </body>
