--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,12 @@
 <h1 class= 'title'><%= @product.title%></h1>
 <p class= 'description'><%= @product.description%></p>
 <span class= 'price'>$<%= @product.price%></span>
+<div>
+<%= link_to 'Editar producto', edit_product_path(@product)%>
+</div>
+<div>
+<%= link_to 'Eliminar producto', product_path(@product), data: {
+    turbo_method: :delete,
+    turbo_confirm: '¿Esta seguro?'
+    } %>
+</div>
