:construction: Ya se puede testear sin inconvenientes, se encuentra todo OK, así mismo se agregaron imagenes y se refactorizaron varias partes del código

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,12 +4,5 @@
 <%= Date.today %>
 <%= @products.count %>
 
+<%= render partial: 'product', collection: @products %>
 
-<% @products.each do |product|%>
-
-<%= link_to product_path(product.id) do %>
-
-    <h2><%= product.title %></h2>
-    <%= product.price %>
-    <% end %>
-<% end %>
