--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
+<-- Debía ser eliminada -->
+
 <%= image_tag @product.photo, width: 200 if @product.photo.attached? %>
 
 <h1 class= 'title'><%= @product.title%></h1>
@@ -11,6 +13,6 @@
 <div>
 <%= link_to 'Eliminar producto', product_path(@product), data: {
     turbo_method: :delete,
-    turbo_confirm: '¿Esta seguro?'
+    turbo_confirm: t('common.confirm')
     } %>
 </div>
